fixed woman overlap in lg view

--- a/iwd-app/public/styles.css
+++ b/iwd-app/public/styles.css
@@ -608,10 +608,6 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
-}
-
 .block {
   display: block;
 }
@@ -660,18 +656,6 @@ video {
   width: 100%;
 }
 
-.w-12 {
-  width: 3rem;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-\[30\%\] {
-  width: 30%;
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -706,16 +690,9 @@ video {
   border-width: 1px;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-0 {
-  padding: 0px;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .py-3 {
@@ -723,34 +700,9 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
 }
 
 .pb-12 {
@@ -762,74 +714,17 @@ video {
   line-height: 2rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-\[10vw\] {
-  font-size: 10vw;
-}
-
-.text-\[1vw\] {
-  font-size: 1vw;
-}
-
-.text-\[17vw\] {
-  font-size: 17vw;
-}
-
 .text-\[13vw\] {
   font-size: 13vw;
-}
-
-.text-\[8vw\] {
-  font-size: 8vw;
-}
-
-.text-\[6vw\] {
-  font-size: 6vw;
-}
-
-.text-\[4\.5vw\] {
-  font-size: 4.5vw;
-}
-
-.text-\[1\.5vw\] {
-  font-size: 1.5vw;
-}
-
-.text-\[11vw\] {
-  font-size: 11vw;
-}
-
-.text-\[12vw\] {
-  font-size: 12vw;
-}
-
-.text-\[14vw\] {
-  font-size: 14vw;
-}
-
-.font-semibold {
-  font-weight: 600;
 }
 
 .leading-customh1 {
   line-height: 1.3em;
 }
 
-.leading-tight {
-  line-height: 1.25;
-}
-
 .text-custom-purple {
   --tw-text-opacity: 1;
   color: rgb(148 109 240 / var(--tw-text-opacity));
-}
-
-.text-\[vw\] {
-  color: vw;
 }
 
 .transition {
@@ -859,86 +754,12 @@ code {
     width: auto;
   }
 
-  .sm\:w-\[20\%\] {
-    width: 20%;
-  }
-
-  .sm\:w-\[50\%\] {
-    width: 50%;
-  }
-
   .sm\:flex-row {
     flex-direction: row;
   }
 
-  .sm\:items-start {
-    align-items: flex-start;
-  }
-
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .sm\:text-\[11vw\] {
-    font-size: 11vw;
-  }
-
-  .sm\:text-\[18vw\] {
-    font-size: 18vw;
-  }
-
-  .sm\:text-\[30vw\] {
-    font-size: 30vw;
-  }
-
-  .sm\:text-\[6vw\] {
-    font-size: 6vw;
-  }
-
-  .sm\:text-\[4\.5vw\] {
-    font-size: 4.5vw;
-  }
-
   .sm\:text-\[10vw\] {
     font-size: 10vw;
-  }
-
-  .sm\:text-\[1vw\] {
-    font-size: 1vw;
-  }
-
-  .sm\:text-\[17vw\] {
-    font-size: 17vw;
-  }
-
-  .sm\:text-\[8vw\] {
-    font-size: 8vw;
-  }
-
-  .sm\:text-\[9vw\] {
-    font-size: 9vw;
-  }
-
-  .sm\:text-\[15vw\] {
-    font-size: 15vw;
-  }
-
-  .sm\:text-\[13vw\] {
-    font-size: 13vw;
-  }
-
-  .sm\:text-\[12vw\] {
-    font-size: 12vw;
-  }
-
-  .sm\:text-\[vw\] {
-    color: vw;
   }
 }
 
@@ -974,36 +795,12 @@ code {
     width: 75%;
   }
 
-  .md\:w-8 {
-    width: 2rem;
-  }
-
-  .md\:w-\[10\%\] {
-    width: 10%;
-  }
-
   .md\:flex-1 {
     flex: 1 1 0%;
   }
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:flex-row-reverse {
-    flex-direction: row-reverse;
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
-  }
-
-  .md\:items-center {
-    align-items: center;
-  }
-
-  .md\:justify-start {
-    justify-content: flex-start;
   }
 
   .md\:justify-center {
@@ -1027,59 +824,8 @@ code {
     padding-right: 0px;
   }
 
-  .md\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  .md\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .md\:text-\[6vw\] {
     font-size: 6vw;
-  }
-
-  .md\:text-\[4\.5vw\] {
-    font-size: 4.5vw;
-  }
-
-  .md\:text-\[5vw\] {
-    font-size: 5vw;
-  }
-
-  .md\:leading-snug {
-    line-height: 1.375;
-  }
-
-  .md\:text-\[5xl\] {
-    color: 5xl;
-  }
-
-  .md\:text-\[8xl\] {
-    color: 8xl;
-  }
-
-  .md\:text-\[6xl\] {
-    color: 6xl;
-  }
-
-  .md\:text-\[6\] {
-    color: 6;
-  }
-
-  .md\:text-\[7xl\] {
-    color: 7xl;
-  }
-
-  .md\:text-\[\] {
-    color: ;
   }
 }
 
@@ -1108,21 +854,8 @@ code {
     width: 33.333333%;
   }
 
-  .lg\:w-20 {
-    width: 5rem;
-  }
-
-  .lg\:w-\[8\%\] {
-    width: 8%;
-  }
-
   .lg\:self-start {
     align-self: flex-start;
-  }
-
-  .lg\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
   }
 
   .lg\:py-0 {
@@ -1130,25 +863,21 @@ code {
     padding-bottom: 0px;
   }
 
+  .lg\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
   .lg\:pl-woman {
-    padding-left: 12vw;
+    padding-left: 13vw;
   }
 
   .lg\:pr-5 {
     padding-right: 1.25rem;
   }
 
-  .lg\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-
   .lg\:text-\[4\.5vw\] {
     font-size: 4.5vw;
-  }
-
-  .lg\:leading-normal {
-    line-height: 1.5;
   }
 }
 
@@ -1158,19 +887,7 @@ code {
     padding-bottom: 0px;
   }
 
-  .xl\:text-\[2vw\] {
-    font-size: 2vw;
-  }
-
   .xl\:text-\[4\.5vw\] {
     font-size: 4.5vw;
-  }
-
-  .xl\:text-\[8xl\] {
-    color: 8xl;
-  }
-
-  .xl\:text-\[2xl\] {
-    color: 2xl;
   }
 }
